--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ body {
 .contacts {
   color: var(--primary-text-color);
   font-size: 14px;
+  text-decoration: none;
 }
 
 .page-header .contacts {
@@ -51,6 +52,7 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.17;
+  text-decoration: none;
 }
 
 .page-header .logo {
@@ -70,6 +72,7 @@ body {
   font-size: 14px;
   line-height: 1.17;
   font-weight: 500;
+  text-decoration: none;
 }
 
 .site-nav .link:hover,
@@ -136,7 +139,7 @@ body {
 }
 
 .footer .logo {
-  color: var(#ffffff);
+  color: #ffffff;
 }
 
 .footer address {
@@ -148,4 +151,34 @@ body {
 
 .footer .contacts {
   line-height: 1.71;
+}
+
+.portfolio-list .button {
+  color: #212121;
+  background-color: #f5f4fa;
+  font-size: 16px;
+  line-height: 1.625;
+  font-weight: 500;
+}
+
+.portfolio-list .button:active,
+.portfolio-list .button:hover {
+  color: #ffffff;
+  background-color: var(--accent-color);
+}
+
+.samples-list a {
+  text-decoration: none;
+}
+
+.samples-list .title {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 2;
+}
+
+.samples-list p {
+  font-size: 16px;
+  line-height: 1.875;
+  color: var(--primary-text-color);
 }
