--- a/css/styles.css
+++ b/css/styles.css
@@ -32,19 +32,14 @@ body {
 }
 
 .contacts {
-  color: var(--primary-text-color);
   font-size: 14px;
   text-decoration: none;
 }
 
 .page-header .contacts {
+  color: var(--primary-text-color);
   font-weight: 500;
   line-height: 1.17;
-}
-
-.contacts:hover,
-.contacts:focus {
-  color: var(--accent-color);
 }
 
 .logo {
@@ -53,6 +48,10 @@ body {
   font-size: 26px;
   line-height: 1.17;
   text-decoration: none;
+}
+
+.logo span {
+  color: var(--accent-color);
 }
 
 .page-header .logo {
@@ -151,6 +150,12 @@ body {
 
 .footer .contacts {
   line-height: 1.71;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.contacts:hover,
+.contacts:focus {
+  color: var(--accent-color);
 }
 
 .portfolio-list .button {
